src/styles/components/_history.scss
history{
  
  ul{
    list-style-type: none;
    padding-left: 10px;
    
    &:before, &:after{
      content:"\f068";
      font: normal normal normal 20px/1 FontAwesome;
      margin-left: -7px;
      display: block;
      color: #ccc;
    }
    &:before{
      margin-bottom: -9px;
    }
    &:after{
      margin-top: -9px;
    }

    
    li{
      margin: 0px;
      padding: 15px 0;
      border-left: 2px solid #ccc;
      
      &:before{
        content: "\F111" !important;
        font: normal normal normal 17px/1 FontAwesome;
        display: inline-table;
        margin-left: -8px;
        color: #5b616b;
      }
      
      &.current:before{
        color: #ccc;
      }
      
      span{
        display: inline-table;
        margin-left: 4px;
        em{
          padding-left: 5px;
        }
        strong{
          display: block;
        }
      }
      
      // Tagged icon
      .fa{
        font-size: 12px;
        color: #fdb81e;
        padding-left: 5px;
      }
      
    }
  }
  
}

